# tree-sitter-edit

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  release.yml
doc/: dev.md
src/: editor.rs  editors.rs  id.rs  lib.rs  print.rs  traversal.rs
src/editors/: delete.rs  id.rs  left_biased_or.rs  replace.rs
