[package]
name = "tree-sitter-edit"
version = "0.1.2"
edition = "2021"
description = "A crate for printing modified tree-sitter parse trees, intended for use in multi-language code refactoring, linting, or modification (codemod) tools."
keywords = ["codemod", "linting", "parsing", "refactoring", "tree-sitter"]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/langston-barrett/tree-sitter-edit"
repository = "https://github.com/langston-barrett/tree-sitter-edit"

[dev-dependencies]
tree-sitter-c = "0.20"

[dependencies]
tree-sitter = "0.20"